<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBluetooth"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
  



    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/top_relative"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButton1"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/bluetoothStatus"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/bluetoothConn"
        android:textColor="@color/black" />

  <RelativeLayout
      android:id="@+id/cmd_panel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/connButton"
      android:layout_alignLeft="@+id/textView2"
      android:layout_alignRight="@+id/toggleButton1"
      android:orientation="horizontal" >

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/sendButton" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/sendButton"
            android:ems="8"
            android:hint="@string/sendArea" />
        
  </RelativeLayout>

            


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text="@string/recTxtTitle"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cmd_panel"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_below="@+id/clearButton"
        android:layout_marginTop="15dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentBottom="true"
        android:text="@string/main_setting" 
        android:visibility="gone"/>

    <Button
        android:id="@+id/connButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/connButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/connButton"
        android:text="RX: 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/clearButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/toggleButton1"
        android:text="清空" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clearButton"
        android:layout_alignBottom="@+id/clearButton"
        android:layout_alignLeft="@+id/toggleButton1"
        android:text="TX: 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/hfpbutton1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cmd_panel"
        android:layout_alignParentBottom="true"
        android:text="Hfp" />

    <Button
        android:id="@+id/a2dpbutton2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/cmd_panel"
        android:text="A2dp" />

</RelativeLayout>

