<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefebe7">
    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >

    <ImageView
        android:id="@+id/titleBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#106184" />



    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="15dp"
        android:padding="10.0dip"
        android:text="@string/main_home"
        android:textColor="@color/white"
        android:singleLine="true" />

</RelativeLayout>

        <RelativeLayout
        android:id="@+id/logo_name_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_relative"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="35.0dip"
        android:background="@drawable/background_corners"
        android:padding="15.0dip" >
    
            <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.0dip"
            android:src="@drawable/logo_icon" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20.0dip"
                android:text="@string/company_name"
                android:textColor="@color/black" />
            
       
            
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="80dp"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TextView
            android:id="@+id/introText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal|italic" />
     
     </TableLayout>
     
     </RelativeLayout>
     
</RelativeLayout>
